Add build date as updated at in profile meta info

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,9 @@ const profile = {
   sponsor: 'https://ofuse.me/unlibra',
 };
 
+const buildDate = new Date();
+const updatedAt = `${buildDate.getFullYear()}年${buildDate.getMonth() + 1}月`;
+
 const allWorks: Project[] = [
   {
     id: '1',
@@ -171,6 +174,12 @@ const allWorks: Project[] = [
               {profile.website.replace(/^https?:\/\//, '')}
             </a>
           )}
+          <span class="flex items-center gap-1">
+            <svg class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+            </svg>
+            {updatedAt}に更新
+          </span>
         </div>
       </div>
 
