--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
 import '../styles/global.css';
+import '@fontsource/ibm-plex-sans-jp/400.css';
+import '@fontsource/ibm-plex-sans-jp/500.css';
+import '@fontsource/ibm-plex-sans-jp/700.css';
 import { Image } from 'astro:assets';
 
 import iconImg from '../assets/icon.svg';
@@ -125,11 +128,6 @@ Tailwindに馴染むカラーパレットを作りたいという想いから始
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet" />
   </head>
   <body class="bg-base-primary text-neutral-200 antialiased min-h-screen">
     <div class="max-w-2xl mx-auto border-x border-base-secondary min-h-screen">
