Fix typo in bio

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const categories = {
 const profile = {
   name: "unlibra",
   username: "unlibra",
-  bio: `このサイトXオマージュのポートフォリオサイトです
+  bio: `このサイトはXオマージュのポートフォリオサイトです
 これまでの制作実績をまとめています`,
   location: "Tokyo, Japan",
   website: "https://github.com/unlibra",
