--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -205,8 +205,15 @@ Tailwindに馴染むカラーパレットを作りたいという想いから始
         <div>
           <h2 class="text-xl font-bold">{profile.name}</h2>
           <p class="text-neutral-500">@{profile.username}</p>
-          <p class="mt-1 text-sm text-neutral-500 sm:text-base">
-            👻 パロディサイト
+          <p class="mt-1 flex items-center gap-1 text-sm text-neutral-500 sm:text-base">
+            <svg class="size-5" viewBox="0 0 24 24">
+              <path fill="#62676c" d="M12 2v17c-.6 0-1.2-.2-1.8-.4C4.5 16 4 9.5 4 4c0-.3.3-.5.6-.4C6.5 4.5 9 5 12 5z"/>
+              <path fill="#82878c" d="M12 2v17c.6 0 1.2-.2 1.8-.4C19.5 16 20 9.5 20 4c0-.3-.3-.5-.6-.4C17.5 4.5 15 5 12 5z"/>
+              <path fill="#42474c" d="M6.5 10.5a2 2 0 0 1 4 0z"/>
+              <path fill="#42474c" d="M13.5 10.5a2 2 0 0 1 4 0z"/>
+              <path fill="#42474c" d="M7.5 12c0 2.5 2 4.5 4.5 4.5s4.5-2 4.5-4.5c0 0-2 2-4.5 2s-4.5-2-4.5-2z"/>
+            </svg>
+            パロディサイト
           </p>
         </div>
 
